--- a/kyla_stearns/groupChat/static/css/chat.css
+++ b/kyla_stearns/groupChat/static/css/chat.css
@@ -4,108 +4,65 @@
 	font-family: Arial, sans-serif;
 }
 
-:root{
-	--catBlue: #00B0EB;
-	--yellow: #FEF24E;
-}
-
-#container{
+body{
 	width: 970px;
 	margin: auto;
 	padding: 25px;
 	font-size: 16px;
 }
 
-#content{
-	margin: auto;
-	padding: 10px;
-	width: 50%;
+header{
+	height: 100px;
 }
 
 h3{
-	color: var(--catBlue);
-	text-align: center;
+	font-style: italic;
+	margin: 15px 0px 25px 25px;
+	color: orange;
 }
 
-img{
-	display: block;
+main{
 	margin: auto;
-}
-
-#chat_head{
-	display: inline;
-	vertical-align: top;
-}
-
-#cats{
-	display: inline;
-	height: 100px;
-	width: 100px;
-	margin-top: -25px;
-}
-
-form{
 	padding: 10px;
+	width: 90%;
 }
 
-label{
-	display: block;
-	font-weight: bold;
-	margin: 5px 10px 5px 100px;
-}
-
-input{
+#board{
+	height: 250px;
+	width: 650px;
+	margin: 15px 0px 15px 200px;
+	padding: 5px;
 	font-size: 16px;
-	margin: 15px 0px 15px 10px;
-	border: 2px solid black;
-	padding: 2px;
-}
-
-input[type=submit]{
-	padding: 5px;
-	font-size: 14px;
-	background-color: var(--yellow);
-	border: 2px solid black;
-	box-shadow: 2px 2px black;
-	margin: 10px 0px 10px 10px;
-}
-
-button{
-	padding: 5px;
-	font-size: 14px;
-	background-color: var(--yellow);
-	border: 2px solid black;
-	box-shadow: 2px 2px black;
-	margin: 10px 0px 10px 250px;
-}
-
-table{
-	padding: 5px;
-	margin: 25px 15px 25px 15px; 
-}
-
-th{
-	background-color: lightgrey;
 	border: 2px solid black;
 }
 
-#user{
-	border: 2px solid black;
+span{
+	font-weight: bold;
 }
 
-#username{
-	display: inline;
+p{
 	font-style: italic;
 }
 
-#displayChat{
-	border: 2px solid black;
-	height: 350px;
-	width: 650px;
-	overflow: scroll;
+form{
+	margin-left: 200px;
 }
 
-#chat_box{
-	width: 400px;
-	margin-left: 300px;
+textarea{
+	width: 650px;
+	resize: none;
+	font-size: 16px;
+	margin: 15px 0px 15px 0px;
+	border: 2px solid black;
+	padding: 5px;
+}
+
+input[type=submit]{
+	display: block;
+	padding: 5px;
+	font-size: 14px;
+	background-color: lightblue;
+	border: 2px solid black;
+	box-shadow: 2px 2px black;
+	margin: 0px 0px 0px 600px;
 }
