updated task demo. Added deployment.txt command list

--- a/matt_tucker/demos/tasks/client/src/app/task/task-list/task-list.component.html
+++ b/matt_tucker/demos/tasks/client/src/app/task/task-list/task-list.component.html
@@ -1,6 +1,8 @@
 <a [routerLink]="['/task', 'new']">Create Task</a>
 
-<div *ngFor="let task of tasks">
-    <p>Title: {{ task.title }}</p>
+<div *ngFor="let task of tasks; let i = index">
+    {{ i + 1 }}
+    <!-- <p>Title: <a [routerLink]="['/task', task._id]">{{ task.title }}</a></p> -->
+    <p>Title <span (click)="showTask(i)">{{ task.title }}</span></p>
     <p>Description: {{ task.description }}</p>
 </div>
