--- a/matt_tucker/demos/tasks/client/src/app/task/task.component.html
+++ b/matt_tucker/demos/tasks/client/src/app/task/task.component.html
@@ -1,6 +1,6 @@
 <h1>Tasks</h1>
 
+<p>Shared Task Info</p>
 
-<app-task-new></app-task-new>
-<app-task-list></app-task-list>
+<router-outlet></router-outlet>
 
